// Use dbdiagram.io para visualizar este código

Table plan {
  id integer [primary key]
  name varchar(50)
  created_at timestamp
  updated_at timestamp
}

Table users {
  id uuid [primary key]
  username varchar(150)
  email varchar(254)
  plan_id integer [ref: > plan.id]
  is_admin boolean
  is_staff boolean
  is_active boolean
  date_joined timestamp
}

Table youtube_music {
  id uuid [primary key]
  name varchar(100)
  url varchar(255)
  user_id uuid [ref: > users.id]
  observation varchar(255)
  is_active boolean
  created_at timestamp
  updated_at timestamp
}

Table event {
  id uuid [primary key]
  event_name varchar(100)
  start_date date
  end_date date
  youtube_music_id uuid [ref: > youtube_music.id]
  manager_id uuid [ref: > users.id]
  is_active boolean
  created_at timestamp
  updated_at timestamp
}